--- a/mvp-python/templates/order_success.html
+++ b/mvp-python/templates/order_success.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-  <h2>Order placed</h2>
-  <p>Order #{{ order_id }} created. Thank you!</p>
-  <p><a href="{{ url_for('index') }}">Back to site</a></p>
+
+<h2>✔ Замовлення успішно оформлено!</h2>
+
+<p>Номер вашого замовлення: <strong>{{ order_id }}</strong></p>
+
+<a href="{{ url_for('catalog') }}" class="btn-primary">Повернутися до каталогу</a>
+
 {% endblock %}
+
+
